force-app/main/default/objects/Mapping_Template__c/Mapping_Template__c.object-meta.xml
<CustomObject>
    <label>Mapping Template</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Mapping Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapping Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>