force-app/main/default/objects/Mapping_Template__c/fields/All_List__c.field-meta.xml
<CustomField>
    <fullName>All_List__c</fullName>
    <label>All_List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>