force-app/main/default/objects/Mapping_Template__c/fields/Case_Index_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Index_Number__c</fullName>
    <label>Case Index Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>