force-app/main/default/objects/Mapping_Template__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <label>Case Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>