force-app/main/default/objects/Mapping_Template__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>