force-app/main/default/objects/Mapping_Template__c/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <label>Estimated Close Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>