force-app/main/default/objects/Mapping_Template__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <label>Gross</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>