force-app/main/default/objects/Mapping_Template__c/fields/Mapping_JSON__c.field-meta.xml
<CustomField>
    <fullName>Mapping_JSON__c</fullName>
    <label>Mapping JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>