force-app/main/default/objects/Mapping_Template__c/fields/Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Master_Object__c</fullName>
    <label>Master Object</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>