force-app/main/default/objects/Mapping_Template__c/fields/Net__c.field-meta.xml
<CustomField>
    <fullName>Net__c</fullName>
    <label>Net</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>