force-app/main/default/objects/Mapping_Template__c/fields/Pct_Fee_Due_to_Others__c.field-meta.xml
<CustomField>
    <fullName>Pct_Fee_Due_to_Others__c</fullName>
    <label>Pct Fee Due to Others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>