force-app/main/default/objects/Mapping_Template__c/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <label>Retainer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>