force-app/main/default/objects/Mapping_Template__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>