force-app/main/default/objects/Mapping_Template__c/fields/Stage_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Stage_Mappings__c</fullName>
    <label>Stage Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>