force-app/main/default/objects/Mapping_Template__c/fields/Total_Matter_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Matter_Value__c</fullName>
    <label>Total Matter Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>