force-app/main/default/objects/Mapping_Template__c/fields/Type_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Type_Mappings__c</fullName>
    <label>Type Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>