force-app/main/default/objects/Mapping_Template__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>